--- a/material/step2/basic_message_function.ipynb
+++ b/material/step2/basic_message_function.ipynb
@@ -87,7 +87,7 @@
     "handler = WebhookHandler(secretFileContentJson.get(\"secret_key\"))\n",
     "\n",
     "# 啟動server對外接口，使Line能丟消息進來\n",
-    "@app.route(\"/callback\", methods=['POST'])\n",
+    "@app.route(\"/\", methods=['POST'])\n",
     "def callback():\n",
     "    # get X-Line-Signature header value\n",
     "    signature = request.headers['X-Line-Signature']\n",
@@ -195,10 +195,23 @@
     "\n",
     "用戶關注 -> 取得個資 -> 分析用戶 -> 配發不同菜單 -> 用戶發送文字消息 -> 系統回覆文字消息\n",
     "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "'''\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0')\n"
+    "執行此句 可啟動Server\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     app.run(host='0.0.0.0')"
    ]
   },
   {
@@ -214,6 +227,10 @@
     "用戶傳送圖片/影片消息，回應文字消息，並把照片下載到jupyter內的資料中\n",
     "\n",
     "'''\n",
+    "\n",
+    "from linebot.models import (\n",
+    "    MessageEvent, ImageMessage, TextSendMessage,\n",
+    ")\n",
     "\n",
     "@handler.add(MessageEvent, message=ImageMessage)\n",
     "def download_image_to_server(event):\n",
@@ -274,22 +291,44 @@
     "\n",
     "'''\n",
     "\n",
-    "@app.route(\"/pushMessage\", methods=['POST'])\n",
+    "@app.route(\"/pushMessage\", methods=['GET'])\n",
     "def push_message():\n",
     "    \n",
-    "    jsonObjectStrings = open(\"../users.txt\",'r')\n",
-    "    jsonArray = []\n",
-    "\n",
-    "    for jsonObjectString in jsonObjectStrings:\n",
-    "        jsonObject = json.loads(jsonObjectString)\n",
-    "        jsonArray.append(jsonObject)\n",
+    "    json_object_strings = open(\"../users.txt\",'r')\n",
+    "    json_array = []\n",
+    "    user_id_array = []\n",
     "    \n",
-    "    user_id_array = map(lambda user: user.user_id,jsonArray)\n",
+    "    for json_object_string in json_object_strings:\n",
+    "        json_object = json.loads(json_object_string)\n",
+    "        json_array.append(json_object)\n",
     "    \n",
-    "    line_bot_api.push_message(\n",
+    "    for user_record in json_array:\n",
+    "        user_id_array.append(user_record.get(\"user_id\"))\n",
+    "    \n",
+    "    line_bot_api.multicast(\n",
     "        user_id_array,\n",
     "        TextSendMessage(\"廣播消息\")\n",
-    "    )\n"
+    "    )\n",
+    "\n",
+    "    return 'OK'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "\n",
+    "執行此句 可啟動Server\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run(host='0.0.0.0')"
    ]
   },
   {
