fix some detail

--- a/material/step3/advance_message_function.ipynb
+++ b/material/step3/advance_message_function.ipynb
@@ -37,6 +37,8 @@
     "\n",
     "'''\n",
     "\n",
+    "import json\n",
+    "\n",
     "secretFileContentJson=json.load(open(\"../line_secret_key\",'r'))\n",
     "server_url=secretFileContentJson.get(\"server_url\")"
    ]
@@ -350,6 +352,25 @@
     "啟動Server\n",
     "\n",
     "'''\n",
+    "\n",
+    "# 引用Web Server套件\n",
+    "from flask import Flask, request, abort\n",
+    "\n",
+    "# 從linebot 套件包裡引用 LineBotApi 與 WebhookHandler 類別\n",
+    "from linebot import (\n",
+    "    LineBotApi, WebhookHandler\n",
+    ")\n",
+    "\n",
+    "# \n",
+    "from linebot.exceptions import (\n",
+    "    InvalidSignatureError\n",
+    ")\n",
+    "\n",
+    "# 將消息模型，文字收取消息與文字寄發消息 引入\n",
+    "from linebot.models import (\n",
+    "    MessageEvent, TextMessage, TextSendMessage,\n",
+    ")\n",
+    "\n",
     "\n",
     "app = Flask(__name__,static_url_path = \"/images\" , static_folder = \"../images/\" )\n",
     "\n",
