fix step3 step6

--- a/material/step3/Step3_ReplyWelcomText.ipynb
+++ b/material/step3/Step3_ReplyWelcomText.ipynb
@@ -91,8 +91,8 @@
     ")\n",
     "\n",
     "# 設定消息素材\n",
-    "text_reply_message1 = TextSendMessage(text=\"關注區塊鏈技術，掌握市場脈動。\"),\n",
-    "text_reply_message2 = TextSendMessage(text=\"人類所以充滿驚奇，在於人體那一精密又不可探究的系統。佈滿神經元的大腦，而後延展遍歷人體。\\n\\n區塊鏈就好比是人體那驚奇的神經系統，社會是我們的人身，在全身佈滿了神經後，造就了不可思量的奧妙生命。\\n\\n點選菜單，了解區塊鏈前世今生，以文字輸入 more，得到更多資訊。\"),\n",
+    "text_reply_message1 = TextSendMessage(text=\"關注區塊鏈技術，掌握市場脈動。\")\n",
+    "text_reply_message2 = TextSendMessage(text=\"人類所以充滿驚奇，在於人體那一精密又不可探究的系統。佈滿神經元的大腦，而後延展遍歷人體。\\n\\n區塊鏈就好比是人體那驚奇的神經系統，社會是我們的人身，在全身佈滿了神經後，造就了不可思量的奧妙生命。\\n\\n點選菜單，了解區塊鏈前世今生，以文字輸入 more，得到更多資訊。\")\n",
     "image_reply_message1 = ImageSendMessage(\n",
     "                                        original_content_url='https://%s/images/003.jpeg' %server_url ,\n",
     "                                        preview_image_url='https://%s/images/001.jpg' %server_url)\n",
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
