--- a/material/step5/Final_Chatbot.ipynb
+++ b/material/step5/Final_Chatbot.ipynb
@@ -184,13 +184,13 @@
     "    ButtonsTemplate\n",
     ")\n",
     "\n",
-    "#引入模板消息的可用行為\n",
-    "from linebot.models.template import(\n",
-    "    PostbackTemplateAction,\n",
-    "    MessageTemplateAction,\n",
-    "    URITemplateAction,\n",
-    "    DatetimePickerTemplateAction\n",
-    ")\n",
+    "# #引入模板消息的可用行為\n",
+    "# from linebot.models.template import(\n",
+    "#     PostbackTemplateAction,\n",
+    "#     MessageTemplateAction,\n",
+    "#     URITemplateAction,\n",
+    "#     DatetimePickerTemplateAction\n",
+    "# )\n",
     "\n",
     "\n",
     "'''\n",
