update line_bot_api and load file utf8

--- a/material/step4/Step4_MenuReplyButtonTemplate.ipynb
+++ b/material/step4/Step4_MenuReplyButtonTemplate.ipynb
@@ -45,7 +45,7 @@
     "# 載入設定檔\n",
     "\n",
     "import json\n",
-    "secretFileContentJson=json.load(open(\"../line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"../line_secret_key\",'r',encoding=\"utf-8\"))\n",
     "server_url=secretFileContentJson.get(\"server_url\")\n",
     "\n",
     "\n",
