--- a/material/step6_content/Step6_GetContentFromLine.ipynb
+++ b/material/step6_content/Step6_GetContentFromLine.ipynb
@@ -47,7 +47,7 @@
     "# 載入設定檔\n",
     "\n",
     "import json\n",
-    "secretFileContentJson=json.load(open(\"../line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"../line_secret_key\",'r',encoding=\"utf-8\"))\n",
     "server_url=secretFileContentJson.get(\"server_url\")\n",
     "\n",
     "\n",
@@ -134,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
