--- a/material/step8_quickreply_message/Step8_QuickReply_Demo.ipynb
+++ b/material/step8_quickreply_message/Step8_QuickReply_Demo.ipynb
@@ -47,7 +47,7 @@
     "# 載入設定檔\n",
     "\n",
     "import json\n",
-    "secretFileContentJson=json.load(open(\"../line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"../line_secret_key\",'r',encoding=\"utf-8\"))\n",
     "server_url=secretFileContentJson.get(\"server_url\")\n",
     "\n",
     "\n",
