--- a/material/step5/Final_Chatbot.ipynb
+++ b/material/step5/Final_Chatbot.ipynb
@@ -287,7 +287,7 @@
     "        \n",
     "    # 將菜單綁定在用戶身上\n",
     "    linkRichMenuId=secretFileContentJson.get(\"rich_menu_id\")\n",
-    "    linkResult=line_bot_api.link_rich_menu_to_user(secretFileContentJson[\"self_user_id\"], linkRichMenuId)\n",
+    "    linkResult=line_bot_api.link_rich_menu_to_user(event.source.user_id, linkRichMenuId)\n",
     "    \n",
     "    # 回覆文字消息與圖片消息\n",
     "    line_bot_api.reply_message(\n",
